# raytracer

./: .gitignore  .gitmodules  Cargo.toml  README.md  initial-plan-project.norg
CPU/: CMakeLists.txt  Makefile  README.md
CPU/include/core/: hit_record.h  hittable.h  hittable_list.h  kdtree.h
CPU/include/geometry/: bounding_box.h  sphere.h
CPU/include/materials/: lambertian.h  material.h
CPU/include/math/: ray.h  vec3.h
CPU/include/rendering/: camera.h  renderer.h
CPU/include/scenes/: complex_scene.h  scene.h  simple_scene.h
CPU/include/utils/: color.h
CPU/src/: main.cc  main.cpp
CPU/src/core/: hit_record.cpp  hittable_list.cpp  kdtree.cpp
CPU/src/geometry/: bounding_box.cpp  sphere.cpp
CPU/src/materials/: lambertian.cpp
CPU/src/math/: ray.cpp  vec3.cpp
CPU/src/rendering/: camera.cpp  renderer.cpp
CPU/src/scenes/: complex_scene.cpp  simple_scene.cpp
CPU/src/utils/: color.cpp
CUDA/: Makefile
CUDA/include/: camera.cuh  hitable.cuh  hitable_list.cuh  material.cuh  ray.cuh  sphere.cuh  utility.cuh  vec3.cuh
CUDA/src/: main.cu
scripts/: calculate_speedup.py  convert.py  convert.sh  filter_csv.py  filter_csv.sh  filter_speedup.sh  ppmtojpg.py  profiling.sh  profiling_input_parameters.sh  speedup_average.py
src/: hittable.rs  main.rs  ppm.rs  ray.rs  util.rs  vector.rs
src/hittable/: hittable_list.rs  sphere.rs
src/vector/: mod.rs
